common/app/assets/stylesheets/module/_discussion.scss
.d-discussion {
    font-size: 14px;
    font-size: 1.4rem;
}


/* Tabs */
.d-tabs {
    overflow: hidden;
}
.d-tabs__byline,
.d-tabs__commentcount {
    float: left;
}



.d-thread {
    list-style: none;
    margin-left: 0;
    padding-left: 0;
}
.d-thread .d-thread {
    margin-top: 1em;
    padding-left: 39px; /* aligns with top level comment's body */
    border-left: 12px solid #cfcfcd;
}
.d-comment {
    color: #333;
    font-family: sans-serif;
}
.d-thread .d-thread .d-comment,
.d-comment + .d-comment {
    border-top: 1px solid #cfcfcd;
}
.d-comment--blocked > .d-comment__inner {
    opacity: .5;
}
.d-comment__inner {
    padding-top: 4px;
}
.d-comment:target > .d-comment__inner {
    background: rgba(149, 177, 202, .3);
    padding-left: 4px;
    padding-right: 4px;
    margin-left: -4px;
    margin-right: -4px;
}

.d-comment__pick {

}

/* Banner preceeding a comment (eg: Guardian Pick) */
.d-comment-banner {
    position: relative;
    padding: .1em .33333em;
    background: rgb(149, 177, 202);
    color: #fff;
    font-size: 18px;
    margin-bottom: 2px;
}
.d-comment-banner__label {
    font: bold 1em/1 $serifheadline;
}
.d-comment-banner__icon {
    position: absolute;
    display: block;
    top: .1em;
    right: .5em;
}

.d-comment__header {
    margin-top: -2px;
}
.d-comment__avatar-wrapper {
    display: block;
}
.d-comment__avatar {
    padding-top: 2px; /* align avatar with body text */
}

.d-comment__meta {
    line-height: 1.3;
    word-break: break-all;
    word-break: break-word;
    word-wrap: break-word;
}
.d-comment__author {
    font-family: $serif;
}

@media (min-width: 768px) {
    .d-comment__author {
        font-size: 1.28571428571em;
    }
    .d-comment__author + .d-badge {
        top: -.15em;
    }
}

.d-meta-separator {
    color: #aaa;
    font-size: .85714285714em;
}

.d-comment__main {
    padding-bottom: 16px;
}

.d-comment__body {
    word-break: break-all;
    word-break: break-word;
    word-wrap: break-word;
    padding-top: 4px;

    p {
        margin-top: 0;
    }
    blockquote {
        color: #767676;
        margin-left: 0;
        margin-right: 0;
        padding-left: 14px;
        border-left: 2px solid #cfcfcd;
    }
}



/**
 * Simulate Media object on Comments header
 * To have an image or a media on the left,
 * and a content block on its right.
 * See benefits of this technique:
 * - www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code/
 * - http://jsfiddle.net/necolas/rZvEF/
 */
.d-comment-header {
    zoom: 1;

    &:before,
    &:after {
        content: '.';
        display: block;
        overflow: hidden;
        visibility: hidden;
        font-size: 0;
        line-height: 0;
        width: 0;
        height: 0;
    }
    &:after {
        clear: both;
    }
}

.d-comment__media {
    float: left;
    margin-right: 15px;

    img {
        display: block;
        max-width: 100%; /* 1 */
    }
}

/**
 * 1. Create new block formatting context in modern browsers
 * 2. Avoid shrink-wrap behaviour of table-cell
 * 3. Override for IE6/7
 * 4. Create new block formatting context in IE6/7
*/
.d-comment__meta {
    display: table-cell; /* 1 */
    max-width: 100%;
    width: 10000px; /* 2 */
    *width: auto; /* 3 */
    *zoom:1; /* 4 */
}

.d-comment__meta-item {
    color: #767676;
    font-size: .85714285714em;
}

.d-comment__actions {
    margin-top: 8px; /* Compensate missing space in case the comment does not end with a paragraph */
}

.d-comment__action {
    font-size: .85714285714em;
}


/* Badges */
.d-badge:after {
    display: inline-block;
    position: relative;
    top: -.1em;
    background: #005689;
    color: #fff;
    font: bold 13px/.9 EgyptianHeadline, Georgia, serif;
    width: 1em;
    height: 1em;
    margin-left: .2em;
    vertical-align: middle;
    text-align: center;
    cursor: help;
}
.d-badge--contributor:after {
    content: 'c';
    text-indent: -1px;
}
.d-badge--guardian-staff:after {
    content: 'g';
    line-height: .7;
}
.d-badge__label {
    /* Hide the label but not to screen readers */
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.speech-bubble {
    position: relative;
    display: inline-block;
    background: #F5644F;
    padding: .1em .3em;
    border-radius: 4px;
    text-align: center;
    font: normal 16px/1.3 "EgyptianText",georgia,serif;
    color: white;
    text-decoration: none;

    &:after {
        content: "";
        position: absolute;
        bottom: -7px;
        left: 6px;
        border-width: 0 0 8px 8px;
        border-style: solid;
        border-color: transparent #F5644F;
    }
}

